# MONDAY

./: .gitignore  CLAUDE.md  EVVA.md  README.md  RUNBOOK.md  alarms.json  evva-swarm.yml
engine/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
engine/monday/: __init__.py  __main__.py  app.py  book.py  calibmap.py  calibration.py  clean.py  config.py  events.py  exits.py  macro.py  manual.md  pagination.py  parquetio.py  pipeline.py  portfolio.py  regime.py  report.py  review.py  risk.py  signals.py  sizing.py  snapshot.py  store.py  tasks.py  telegram.py  triggers.py
engine/monday/featurestore/: __init__.py  build.py  chips.py  factors.py
engine/monday/ingest/: __init__.py  base.py  finmind.py  macro.py  parse.py  symbols.py  synthetic.py  tpex.py  twse.py  universe.py
engine/monday/models/: __init__.py  baseline.py  cv.py  gbdt.py  labels.py  train.py
engine/monday/routers/: __init__.py  admin.py  book.py  calibration.py  chips.py  factors.py  (+15 more)
engine/scripts/: initdb-test.sql
engine/tests/: pgtest.py  realdata.py  test_book.py  test_calibmap.py  test_calibration.py  test_chips.py  test_config_reload.py  test_cv.py  test_exits.py  test_factors.py  test_gbdt.py  test_ingest_parsers.py  test_labels.py  test_macro.py  test_pagination.py  test_pipeline.py  test_portfolio.py  test_quota.py  test_regime.py  test_report.py  test_review.py  test_risk.py  test_signals.py  test_signals_immutability.py  test_sizing.py  test_store.py  test_store_pipeline_lock.py  test_system_async.py  test_tasks.py  test_triggers.py  test_universe.py
(+104 files in other folders)
